# composable-instrumentation

./: CMakeLists.txt  LICENSE  README.md
ExampleOutput/: example_output.txt
InstrumentPass/: CMakeLists.txt  InstrumentPass.cpp
Tests/: a.out  instrument.c  test.c  test.sh  time.cpp
